WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137191
REGRESSION(
r172919
): WebKitPluginProcess fails to scan GTK+2 plugins after
r172919
.
https://bugs.webkit.org/show_bug.cgi?id=137191
Summary
REGRESSION(r172919): WebKitPluginProcess fails to scan GTK+2 plugins after r1...
Carlos Garcia Campos
Reported
2014-09-28 02:07:32 PDT
In
r172919
I moved the GTK+ symbols mix check earlier, before the plugin is loaded and initialized. That made impossible to use the gtk3 plugin process to scan gtk2 plugins, because we need to load the plugin to get its metadata. $ bin/WebKitPluginProcess -scanPlugin /usr/lib/mozilla/plugins/flash-mozilla.so $ echo $? 1 $ bin/WebKitPluginProcess2 -scanPlugin /usr/lib/mozilla/plugins/flash-mozilla.so Shockwave Flash Shockwave Flash 11.2 r202 application/x-shockwave-flash:swf:Shockwave Flash;application/futuresplash:spl:FutureSplash Player requires-gtk2 We need to load and initialize the plugin to get its metadata, but not to check if it requires GTK2, so we can move that check to the UI process to decide also which plugin process to use when scanning a plugin. This problem hasn't been noticed earlier thanks to the plugins cache, but after a flash plugin upgrade of my distro, the cache forces a new scan of the plugin that always fails.
Attachments
Patch
(6.73 KB, patch)
2014-09-28 02:22 PDT
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-09-28 02:22:47 PDT
Created
attachment 238810
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-09-29 01:52:04 PDT
Committed
r174054
: <
http://trac.webkit.org/changeset/174054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug